--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,9 @@ dependencies = [
     "jinja2>=3.1.0",
     "tqdm>=4.66.0",
     "python-dotenv>=1.0.0",
+
+    # sunrise/sunset
+    "astral>=3.2",
 ]
 
 [project.optional-dependencies]
