--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,9 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+ffmpegcv = [
+    "ffmpegcv>=0.2.0",
+]
 dev = [
     "pytest>=7.4.0",
     "pytest-cov>=4.1.0",
@@ -67,6 +70,10 @@ dev = [
     "flake8>=6.0.0",
     "mypy>=1.5.0",
     "pre-commit>=3.3.0",
+]
+all = [
+    "timelapse-generator[ffmpegcv]",
+    "timelapse-generator[dev]",
 ]
 
 [project.scripts]
